fix encryption enabled css alignment

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -27,8 +27,8 @@ limitations under the License.
     background-color: $dark-panel-bg-color;
     padding: 10px;
     border-radius: 5px;
-    margin: 10px auto;
-    max-width: 75%;
+    margin: 10px 0 10px 65px;
+    display: inline-block;
     box-sizing: border-box;
 }
 
